--- a/formulario.html
+++ b/formulario.html
@@ -52,11 +52,19 @@
         <div>
             <label>Senioridade</label>
             <select id="senioridade">
+                <option selected disable value="">Selecione:</option>
                <option>Junior</option>
                <option>Pleno</option>
                <option>Senior</option>
             </select>
         </div>
+
+        <fieldset>
+            <div>
+                <label>Selecione as tecnologias que utiliza:</label><br><br>
+                <input type="checkbox" id = "tecnologia1">
+            </div>
+        </fieldset>
 </form>
 
 </body>
