--- a/formulario.html
+++ b/formulario.html
@@ -9,32 +9,32 @@
 <body>
     
 <div>
-    <h1>Cadastro de DEVs</h1>
-    <p>Complete suas informações</p>
+    <h1 id="titulo">Cadastro de DEVs</h1>
+    <p id="subtitulo">Complete suas informações</p>
     <br>
 </div>
 
 <form>
-    <fieldset>
+    <fieldset class="grupo">
         <div>
-            <label>Nome</label>
-            <input type="text" name="nome" id="nome">
+            <label for="nome"><strong>Nome</strong></label>
+            <input type="text" name="nome" id="nome" required>
         </div>
 
-        <div>
-            <label>Sobrenome</label>
-            <input type="text" name="sobrenome" id="sobrenome">
+        <div class="campo">
+            <label for="sobrenome"><strong>Sobrenome</strong></label>
+            <input type="text" name="sobrenome" id="sobrenome" required>
         </div>
 
-         <div>
-        <label>Email</label>
+         <div class="campo">
+        <label for="email"><strong>Email</strong></label required>
         <input type="email" name="email" id="email">
         </div>
     </fieldset>
 
     
-        <div>
-            <label>De qual lado da aplicação você desenvolve?</label>
+        <div class="campo">
+            <label><strong>De qual lado da aplicação você desenvolve?</strong></label>
 
             <label>
                 <input type="radio" name="devweb" value="frontend">Front-end
@@ -50,7 +50,7 @@
         </div>
 
         <div>
-            <label>Senioridade</label>
+            <label><strong>Senioridade</strong></label>
             <select id="senioridade">
                 <option selected disable value="">Selecione:</option>
                <option>Junior</option>
@@ -59,12 +59,34 @@
             </select>
         </div>
 
-        <fieldset>
+        <fieldset class="grupo">
             <div>
-                <label>Selecione as tecnologias que utiliza:</label><br><br>
-                <input type="checkbox" id = "tecnologia1">
+                <label><strong>Selecione as tecnologias que utiliza:</strong></label><br><br>
+                <input type="checkbox" id = "tecnologia1" name="tecnologia1" value="HTML">
+                <label for="tecnologia1">HTML</label>
+                <input type="checkbox" id = "tecnologia2" name="tecnologia2" value="CSS">
+                <label for="tecnologia2">CSS</label>
+                <input type="checkbox" id = "tecnologia3" name="tecnologia3" value="Javascript">
+                <label for="tecnologia3">JavaScript</label>
+                <input type="checkbox" id = "tecnologia4" name="tecnologia4" value="PHP">
+                <label for="tecnologia4">PHP</label>
+                <input type="checkbox" id = "tecnologia5" name="tecnologia5" value="C#">
+                <label for="tecnologia5">C#</label>
+                <input type="checkbox" id = "tecnologia6" name="tecnologia6" value="Phyton">
+                <label for="tecnologia6">Phyton</label>
+                <input type="checkbox" id = "tecnologia7" name="tecnologia7" value="Java">
+                <label for="tecnologia7">Java</label>
             </div>
         </fieldset>
+
+            <div>
+                <br>
+                <label><strong>Conte um pouco sobre sua experiência:</strong></label>
+                <textarea row="6" style="width: 26em" id="experiencia"></textarea>
+            </div>
+
+            <button type="submit"><strong>Concluído</strong></button>
+
 </form>
 
 </body>
