--- a/formulario.html
+++ b/formulario.html
@@ -50,7 +50,7 @@
         </div>
 
         <div>
-            <label><strong>Senioridade</strong></label>
+            <label for="senioridade"><strong>Senioridade</strong></label>
             <select id="senioridade">
                 <option selected disable value="">Selecione:</option>
                <option>Junior</option>
@@ -85,7 +85,7 @@
                 <textarea row="6" style="width: 26em" id="experiencia"></textarea>
             </div>
 
-            <button type="submit"><strong>Concluído</strong></button>
+            <button class="botao" type="submit"><strong>Concluído</strong></button>
 
 </form>
 
