--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <div class="field">
                 <br>
-                <label for="experience"><strong>Tell about you experience: </strong></label>
+                <label for="experience"><strong>Write about your experience: </strong></label>
                 <textarea rows="6" style="width: 26em" id="experience" name="experience"></textarea> 
                 <button class="button" type="submit" onsubmit="">Finish</button>
             </div>           
