done button fixed

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <br>
                 <label for="experience"><strong>Write about your experience: </strong></label>
                 <textarea rows="6" style="width: 26em" id="experience" name="experience"></textarea> 
-                <button class="button" type="submit" onsubmit="">Finish</button>
+                <button class="button" type="submit" onsubmit="">Done</button>
             </div>           
 
         </form>
