--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" type="text/css" href="/assets/style.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen">
         <title>FORM</title>
     </head>
 
@@ -14,7 +14,9 @@
         <div>
             <h1 id="title">DEV REGISTRATION</h1>
             <br>
+            <br>
             <p id="subtitle">Fill in with your information:</p>
+            <br>
             <br>
         </div>
        
@@ -23,7 +25,7 @@
             <fieldset class="group">
 
                 <div class="field">
-                    <label for="name"><strong>Name</strong></label>
+                    <label for="name"><strong>First name</strong></label>
                     <input type="text" name="name" id="name" required>
                 </div>
 
