update: front end completed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 id="title">DEV REGISTRATION</h1>
             <br>
             <br>
-            <p id="subtitle">Fill in with your information:</p>
+            <p id="subtitle">FILL IN WITH YOUR INFORMATION:</p>
             <br>
             <br>
         </div>
@@ -38,7 +38,6 @@
             <div class="field">
                 <label for="email"><strong>Email</strong></label>
                 <input type="email" name="email" id="email" required>
-                <br>
             </div>
 
             <div class="field">
