update: button error fixed

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
                     <input type="checkbox" id="tecnology7" name="tecnology7" value="Java">
                     <label for="tecnology7"> Java</label>
                 </div>
-            </fieldset>
+            </fieldset>          
 
-            <div class="field">
+            <div class="field_bottom">
                 <br>
                 <label for="experience"><strong>Write about your experience: </strong></label>
                 <textarea rows="6" style="width: 26em" id="experience" name="experience"></textarea> 
                 <button class="button" type="submit" onsubmit="">Done</button>
-            </div>           
+            </div>
 
         </form>
 
