completed front end

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
             </fieldset>          
 
-            <div class="field_bottom">
+            <div class="field">
                 <br>
                 <label for="experience"><strong>Write about your experience: </strong></label>
                 <textarea rows="6" style="width: 26em" id="experience" name="experience"></textarea> 
