Update: remove check select

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="field">
                 <label><strong>Which side of the application do you develop?</strong></label>
                 <label>
-                    <input type="radio" name="devweb" value="frontend" checked>Front-end
+                    <input type="radio" name="devweb" value="frontend">Front-end
                 </label>
                 <label>
                     <input type="radio" name="devweb" value="backend">Back-end
